# RAGameExplainer

./: .gitignore  README.md  main.py  requirements.txt
fe/: app.js  index.html  style.css
league-of-legend/: README.md  main.py  pyproject.toml  requirements.txt
league-of-legend/config/: settings.py
league-of-legend/src/: __init__.py  http_client.py
league-of-legend/src/crawlers/: __init__.py  base.py  champion.py  item.py  map.py  rune.py  spell.py  version.py
league-of-legend/src/models/: __init__.py  champion.py  item.py  patch.py  rune.py  spell.py
league-of-legend/src/storage/: __init__.py  base.py  json_storage.py  sqlite_storage.py
league-of-legend/src/utils/: __init__.py
rag/: __init__.py  cache.py  indexer.py  pipeline.py  prompt_builder.py  queue.py  search.py
