[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lol-data-crawler"
version = "1.0.0"
description = "Production-quality League of Legends data crawler using Riot Data Dragon API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "rich>=13.0.0",
]

[project.scripts]
lol-crawler = "main:main"

[tool.setuptools.packages.find]
where = ["."]
